[gd_scene load_steps=10 format=3 uid="uid://c0wuc6iecq3i6"]

[ext_resource type="Script" path="res://Scenes/BoosterButton/booster_button.gd" id="1_4fe4r"]
[ext_resource type="Texture2D" path="res://Assets/BoosterButton/normal_bg.tres" id="1_swj3f"]
[ext_resource type="Texture2D" path="res://Assets/BoosterButton/locked_bg.tres" id="2_gp7ho"]
[ext_resource type="Texture2D" path="res://Assets/BoosterButton/add_icon.tres" id="5_swj3f"]
[ext_resource type="Texture2D" path="res://Assets/BoosterButton/count_bg.tres" id="6_swj3f"]
[ext_resource type="FontFile" uid="uid://cjofpiuwfbr7i" path="res://Assets/fonts/Lilita One Regular.ttf" id="7_gp7ho"]

[sub_resource type="LabelSettings" id="LabelSettings_llhin"]
font = ExtResource("7_gp7ho")
font_size = 32

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wbst6"]
texture = ExtResource("6_swj3f")
texture_margin_left = 11.0
texture_margin_right = 10.0

[sub_resource type="LabelSettings" id="LabelSettings_kq1al"]
font = ExtResource("7_gp7ho")
font_size = 23

[node name="BoosterButton" type="TextureButton"]
focus_mode = 0
texture_normal = ExtResource("1_swj3f")
texture_pressed = ExtResource("1_swj3f")
texture_hover = ExtResource("1_swj3f")
texture_disabled = ExtResource("2_gp7ho")
texture_focused = ExtResource("1_swj3f")
script = ExtResource("1_4fe4r")

[node name="LockedLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
label_settings = SubResource("LabelSettings_llhin")
horizontal_alignment = 1

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Icon" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="PlusIcon" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -26.0
offset_top = -40.0
offset_right = 17.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("5_swj3f")

[node name="CountBackground" type="PanelContainer" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -25.0
offset_top = -11.0
offset_right = 17.0
offset_bottom = 29.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_wbst6")

[node name="Label" type="Label" parent="Control/CountBackground"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_kq1al")
horizontal_alignment = 1
vertical_alignment = 1
